# multifocus-imaging-optimizeding-for-arm-neon

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  multi_focus.sln  multi_focus.vcxproj  multi_focus.vcxproj.filters
.github/workflows/: cmake-multi-platform.yml
src/: Android.mk  NEON_2_SSE.h  alignment.cpp  alignment.h  custom_multifocus.cpp  custom_multifocus.h  main.cpp  splining.cpp  splining.h  utils.h
